[package]
name = "coincheck-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
env_logger = "0.11.3"
log = "0.4.17"
futures-util = { version = "0.3.27", default-features = false, features = [
    "sink",
    "std",
] }
anyhow = "1.0.69"
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls",
    "json",
] }
dotenv = "0.15.0"
hex = "0.4.3"
ring = "0.17.8"

[profile.release]
lto = true
